<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">
    <!--Nome-->
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nome" />

    <EditText
        android:inputType="text"
        android:id="@+id/et_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--Idade-->
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_idade" />

    <EditText
        android:inputType="number"
        android:id="@+id/et_idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:background="@drawable/fundo_borda"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sexo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/rg_sexo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RadioButton
                    android:checked="true"
                    android:id="@+id/rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_masculino"/>

                <RadioButton
                    android:id="@+id/rb_feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_feminino"/>
            </RadioGroup>
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_view_carousel_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_cidade"/>
    <Spinner
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fundo_borda"
        android:id="@+id/sp_cidade"/>
    <Button
        android:id="@+id/btn_lerdados"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_ler_dados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>